--- a/PillarEngineeringSL/index.html
+++ b/PillarEngineeringSL/index.html
@@ -182,7 +182,7 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-          <p>Pillar Engineering LLC provides solutions to world problems through engineering, where we bring your vision to life.With more than 20 years of experience,Pillar Engineering is your trusted and preferred source for all your engineering needs.primary service area Project Management Services,Materials Construction Testing,Geotechnical Engineering,Transportation Engineering (Road Construction, Underground Utilities,Bridge Building,Asphalt,and Concrete Paving),engineering with energy-efficient technologies.</p>
+          <p>Pillar Engineering LLC provides solutions to world problems through engineering, where we bring your vision to life. With more than 20 years of experience, Pillar Engineering is your trusted and preferred source for all your engineering needs. Primary service area, Project Management Services, Materials Construction Testing, Geotechnical Engineering, Transportation Engineering (Road Construction, Underground Utilities, Bridge Building, Asphalt, and Concrete Paving), Engineering with energy-efficient technologies.</p>
         </header>
 
         <div class="row about-cols">
@@ -195,7 +195,7 @@
               </div>
               <h2 class="title"><a href="#">Our Mission</a></h2>
               <p>
-                PILLAR ENGINEERING LLC's mission is to provide clients with various engineering services focusing on solving world problems through Engineering,Construction, and Technology. Connect and enhance our globe with innovation.Our services exceed the expectation of our customers.Vision and innovation are our formulae.
+                PILLAR ENGINEERING LLC's mission is to provide clients with various engineering services focusing on solving world problems through Engineering, Construction, and Technology. Connect and enhance our globe with innovation. Our services exceed the expectation of our customers. Vision and innovation are our formulae.
               </p>
             </div>
           </div>
@@ -221,7 +221,7 @@
               </div>
               <h2 class="title"><a href="#">Our Vision</a></h2>
               <p>
-                Are you living in sierra Leone or outside of Sierra Leone?Do you want to renovate or build your own home?Pillar Engineering is here to help you make your dreams come true by designing and building your new home with the world standard and by also renovating your existing home to yor exact taste.Pillar Engineering staff goes above and beyond to make our clients happy with honesty and intergrity.
+                Are you living in Sierra Leone or outside of Sierra Leone? Do you want to renovate or build your home? Pillar Engineering is here to help you make your dreams come true by designing and building your new home with the world standard and by also renovating your existing home to yor exact taste. Pillar Engineering staff goes above and beyond to make our clients happy with honesty and intergrity.
               </p>
             </div>
           </div>
@@ -663,7 +663,7 @@
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=BizPage
       -->
-        Designed by <a href="https://bootstrapmade.com/">Farbel</a>
+        Designed by <a href="https://bootstrapmade.com/">FA Bello Consults</a>
       </div>
     </div>
   </footer><!-- End Footer -->
